--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.7.1",
     "react-loader-spinner": "^5.3.4",
     "react-router": "^6.6.1",
+    "react-router-dom": "^6.6.2",
     "react-spinners": "^0.13.7"
   },
   "devDependencies": {
